// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div
  className="issue-message break-word"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
</div>
`;

exports[`should render correctly: is deprecated rule 1`] = `
<div
  className="issue-message break-word"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <DocumentationTooltip
    className="spacer-left"
    content="rules.status.DEPRECATED.help"
    links={
      Array [
        Object {
          "href": "/documentation/user-guide/rules/",
          "label": "see_x.rules",
        },
      ]
    }
  >
    <span
      className="spacer-right badge badge-error"
    >
      rules.status.DEPRECATED
    </span>
  </DocumentationTooltip>
</div>
`;

exports[`should render correctly: is manual vulnerability 1`] = `
<div
  className="issue-message break-word"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <Tooltip
    overlay="issue.manual_vulnerability.description"
  >
    <div
      className="badge spacer-right text-baseline"
    >
      issue.manual_vulnerability
    </div>
  </Tooltip>
</div>
`;

exports[`should render correctly: is removed rule 1`] = `
<div
  className="issue-message break-word"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <DocumentationTooltip
    className="spacer-left"
    content="rules.status.REMOVED.help"
    links={
      Array [
        Object {
          "href": "/documentation/user-guide/rules/",
          "label": "see_x.rules",
        },
      ]
    }
  >
    <span
      className="spacer-right badge badge-error"
    >
      rules.status.REMOVED
    </span>
  </DocumentationTooltip>
</div>
`;

exports[`should render correctly: with engine info 1`] = `
<div
  className="issue-message break-word"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <Tooltip
    overlay="issue.from_external_rule_engine.js"
  >
    <div
      className="badge spacer-right text-baseline"
    >
      js
    </div>
  </Tooltip>
</div>
`;

exports[`should render correctly: with engine name 1`] = `
<div
  className="issue-message break-word"
>
  <span
    className="spacer-right"
  >
    Reduce the number of conditional operators (4) used in the expression
  </span>
  <ButtonLink
    aria-label="issue.why_this_issue.long"
    className="issue-see-rule spacer-right text-baseline"
    onClick={[Function]}
  >
    issue.why_this_issue
  </ButtonLink>
  <Tooltip
    overlay="issue.from_external_rule_engine.JS"
  >
    <div
      className="badge spacer-right text-baseline"
    >
      JS
    </div>
  </Tooltip>
</div>
`;
